--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
           </a>
           <br>
           <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">Min Zhang</a>,
+          <a href="https://scholar.google.com/citations?hl=en&user=BhysChMAAAAJ&view_op=list_works&sortby=pubdate">Haoxuan You</a>,
 	      <strong>Pranav Kadam</strong>,
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
