--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
 							<em>Submitted to IEEE International Conference on Image Processing, 2022</em>
               <br>
               <a href="./PCRP/index.html">project page</a>
-              <!-- /
-              <a href="https://arxiv.org/abs/2111.12077">arXiv</a> -->
+              /
+              <a href="https://arxiv.org/abs/2202.07843">arXiv</a>
             
               <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
             </td>
