--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
-							<em>Accepted at IEEE Transactions on Image Processing, 2022</em>
+							<em>IEEE Transactions on Image Processing, 2022</em>
               <br>
               <a href="./R-PointHop/index.html">project page</a>
               |
