--- a/R-PointHop/index.html
+++ b/R-PointHop/index.html
@@ -151,14 +151,15 @@ GitHub.
                     Citation
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
-                    <textarea id="bibtex" class="form-control" readonly>
+                    <textarea id="bibtex" class="form-control" readonly>                      
 @article{kadam2021r,
-   title={R-pointhop: a green, accurate and unsupervised point cloud 
-   registration method},
-   author={Kadam, Pranav and Zhang, Min and Liu, Shan and Kuo, C-C Jay},
-   journal={arXiv preprint arXiv:2103.08129},
-   year={2021}
-   }
+  author={Kadam, Pranav and Zhang, Min and Liu, Shan and Jay Kuo, C.-C.},
+  journal={IEEE Transactions on Image Processing}, 
+  title={R-PointHop: A Green, Accurate, and Unsupervised Point Cloud Registration Method}, 
+  year={2022},
+  doi={10.1109/TIP.2022.3160609}
+  }
+                        
 </textarea>
                 </div>
             </div>
