--- a/R-PointHop/index.html
+++ b/R-PointHop/index.html
@@ -32,7 +32,7 @@
             <h2 class="col-md-12 text-center">
                 <b>R-PointHop</b>: A Green, Accurate and Unsupervised <br> Point Cloud Registration Method</br> 
                 <small>
-                    Accepted at IEEE Transactions on Image Processing, 2021
+                    IEEE Transactions on Image Processing, 2022
                 </small>
             </h2>
         </div>
