--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                 
                                 <ul>
                                     <li><b>Supervisor -</b> C.-C. Jay Kuo</li>
-                                    <li><b>Projects - </b>Point cloud classification, registration, segmentation, compression, and quality assessment</li>
+                                    <li><b>Projects - </b>Point cloud classification, registration, segmentation, compression</li>
                                 </ul>
                             </p>
                         </td>
@@ -297,7 +297,7 @@
                             <p>
                               <ul>
                                 <li><b>Supervisor - </b>Dipankar Bhattacharya </li>
-                                <li><b>Project - </b>Detection and Analysis of Gamma Ray Bursts (GRBs) from Astrosat Satellite data</li>
+                                <li><b>Project - </b>Detection and Analysis of Gamma Ray Bursts (GRBs) from Astrosat Satellite data using Machine Learning techniques</li>
                               </ul>
                                 
                             </p>
