--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:pranavka@usc.edu">Email</a> &nbsp/&nbsp
-                <a href="data/Updated_Resume.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/Pranav-Kadam-Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="data/PranavKadam-bio.txt">Bio</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=eV8moYMAAAAJ&hl=en&authuser=1">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/pranavkadam/">LinkedIn</a> &nbsp/&nbsp
