--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
 		      <name>Pranav Kadam</name>
               </p>
-              <p>I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. Presently, I am working as a Research Assistant in <a href="https://mcl.usc.edu/">Media Communications Lab</a> led by Prof. Kuo. I will spend the summer of 2022 at InterDigital as a Research Intern where I will work on learning based point cloud compression.
+              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. Presently, I am working as a Research Assistant in <a href="https://mcl.usc.edu/">Media Communications Lab</a> led by Prof. Kuo. I will spend the summer of 2022 at InterDigital as a Research Intern where I will work on learning based point cloud compression.
 
               </p>
               <p style="text-align:center">
