--- a/index.html
+++ b/index.html
@@ -242,6 +242,37 @@
 	      
 	      <button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Research Experience</heading></button>
                 <div id="content-experience" class="collapse in">
+			
+		                <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+
+                    <tr>
+                        <td style="padding:10px;width:25%;vertical-align:middle">
+                            <div class="one">
+                                <img src='images/USC-logo.png' width="110" class="side-image">
+                            </div>
+                        </td>
+                        <td style="padding:10px;width:75%;vertical-align:top">
+                            <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
+                            <papertitle><big>InterDigital</big></papertitle>
+                            <br>
+                            <papertitle style="color:maroon"><big>Research Intern</big></papertitle>
+                            <br>
+			    <i>Los Angeles, CA</i>
+                            <br>                              							    
+                            May 2019 - present
+                            <br>
+                            <br>
+                            <p>
+                                
+                                <ul>
+                                    <li><b>Supervisor -</b> Dong Tian</li>
+                                    <li><b>Topic - </b>AI-based 3D Point Cloud Compression</li>
+                                </ul>
+                            </p>
+                        </td>
+                    </tr>
+
+                </tbody></table>
 
                 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
