--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <tr>
                         <td style="padding:10px;width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src='images/USC-logo.png' width="110" class="side-image">
+                                <img src='images/InterDigital.jpg' width="110" class="side-image">
                             </div>
                         </td>
                         <td style="padding:10px;width:75%;vertical-align:top">
