--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             <br>
                             <papertitle style="color:maroon"><big>Research Intern</big></papertitle>
                             <br>
-			    <i>Los Angeles, CA</i>
+			    <i>New York, NY</i>
                             <br>                              							    
                             May 2022 - present
                             <br>
