--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <p>
                                 
                                 <ul>
-                                    <li><b>Supervisor -</b> Dong Tian</li>
+                                    <li><b>Supervisor -</b> Dong Tian, Jiahao Pang</li>
                                     <li><b>Topic - </b>AI-based 3D Point Cloud Compression</li>
                                 </ul>
                             </p>
