--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
 		      <name>Pranav Kadam</name>
               </p>
-              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. Presently, I am working as a Research Assistant in <a href="https://mcl.usc.edu/">Media Communications Lab</a> led by Prof. Kuo. I will spend the summer of 2022 at InterDigital as a Research Intern where I will work on learning based point cloud compression.
+              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. Presently, I am working as a Research Assistant in <a href="https://mcl.usc.edu/">Media Communications Lab</a> led by Prof. Kuo. My research focuses on point cloud analysis and compression. I spent the summer of 2022 at InterDigital as a Research Intern where I worked on learning based compression of dynamic LiDAR point clouds.
 
               </p>
               <p style="text-align:center">
@@ -248,7 +248,8 @@
                     <tr>
                         <td style="padding:10px;width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src='images/InterDigital.jpg' width="110" class="side-image">
+                                <img src='images/
+					  .jpg' width="110" class="side-image">
                             </div>
                         </td>
                         <td style="padding:10px;width:75%;vertical-align:top">
@@ -259,14 +260,14 @@
                             <br>
 			    <i>New York, NY</i>
                             <br>                              							    
-                            May 2022 - present
+                            May 2022 - August 2022
                             <br>
                             <br>
                             <p>
                                 
                                 <ul>
                                     <li><b>Supervisor -</b> Dong Tian, Jiahao Pang</li>
-                                    <li><b>Topic - </b>AI-based 3D Point Cloud Compression</li>
+                                    <li><b>Project - </b>Dynamic LiDAR Point Cloud Compression using Deep Learning techniques</li>
                                 </ul>
                             </p>
                         </td>
@@ -297,7 +298,7 @@
                                 
                                 <ul>
                                     <li><b>Supervisor -</b> C.-C. Jay Kuo</li>
-                                    <li><b>Projects - </b>Point cloud classification, registration, segmentation, compression</li>
+                                    <li><b>Projects - </b>Point cloud classification, registration, segmentation</li>
                                 </ul>
                             </p>
                         </td>
@@ -470,7 +471,7 @@
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>,
               <br>
-							<em>Submitted to IEEE International Conference on Image Processing, 2022</em>
+							<em>IEEE International Conference on Image Processing, 2022</em>
               <br>
               <a href="./PCRP/index.html">project page</a>
               /
@@ -490,7 +491,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="./GPCO/index.html">
-                <papertitle>GPCO: An Unsupervised Green Point Cloud Odometry Method</papertitle>
+                <papertitle>GreenPCO: GreenPCO: An Unsupervised Lightweight Point Cloud Odometry Method</papertitle>
               </a>
               <br>
               <strong>Pranav Kadam</strong>,
@@ -498,7 +499,7 @@
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
               <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>,
               <br>
-							<em>Submitted to Pattern Recognition Letters, 2021</em>
+							<em>IEEE International Workshop on Multimedia Signal Processing (MMSP), 2022</em>
               <br>
               <a href="./GPCO/index.html">project page</a>
               |
