--- a/GPCO/index.html
+++ b/GPCO/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GPCO</title>
+    <title>GreenPCO</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,7 +50,7 @@
                             Min Zhang
                         </a>
                         </br>University of Southern California
-                    </li><br>
+                    </li>
                     <li>
                         <a href="http://mcl.usc.edu/people/graduate-students/#Jiahao_Gu">
                             Jiahao Gu
