--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
 
                 <table border=0 class="bg_colour" style="padding:10px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                    
+			<tr>
+                        <td>
+                            <p style="color:maroon; display:inline">Aug '22 &nbsp</p>
+                        </td>
+                        <td>
+				GreenPCO paper on LiDAR odometry accepted in IEEE International Workshop on Multimedia Signal Processing (MMSP), 2022
+                        </td>
+                    </tr>
+			
+			 <tr>
+                        <td>
+                            <p style="color:maroon; display:inline">Jul '22 &nbsp</p>
+                        </td>
+                        <td>
+				PCRP paper on object retrieval and pose estimation accepted in IEEE International Conference on Image Processing (ICIP), 2022
+                        </td>
+                    </tr>
+			
 			 <tr>
                         <td>
                             <p style="color:maroon; display:inline">Mar '22 &nbsp</p>
