--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="./GPCO/index.html">
-                <papertitle>GreenPCO: GreenPCO: An Unsupervised Lightweight Point Cloud Odometry Method</papertitle>
+                <papertitle>GreenPCO: An Unsupervised Lightweight Point Cloud Odometry Method</papertitle>
               </a>
               <br>
               <strong>Pranav Kadam</strong>,
