--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <p style="color:maroon; display:inline">Aug '22 &nbsp</p>
                         </td>
                         <td>
-				GreenPCO paper on LiDAR odometry accepted in IEEE International Workshop on Multimedia Signal Processing (MMSP), 2022
+				GreenPCO paper on LiDAR odometry accepted in IEEE MMSP, 2022
                         </td>
                     </tr>
 			
@@ -64,7 +64,7 @@
                             <p style="color:maroon; display:inline">Jul '22 &nbsp</p>
                         </td>
                         <td>
-				PCRP paper on object retrieval and pose estimation accepted in IEEE International Conference on Image Processing (ICIP), 2022
+				PCRP paper on object retrieval and pose estimation accepted in IEEE ICIP, 2022
                         </td>
                     </tr>
 			
