--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <br>
                             <p>
                               <ul>
-                                <li><b>Coursework -</b> Computer Vision, Deep Learning, Digital Image Processing, Robotics, Linear Algebra, Probability, DIgital Signal Processing, Stochastic Systems and Reinforcement Learning</li>
+                                <li><b>Coursework -</b> Computer Vision, Deep Learning, Digital Image Processing, Robotics, Linear Algebra, Probability, Digital Signal Processing, Stochastic Systems and Reinforcement Learning</li>
                               </ul>
                           </p>
                         </td>
@@ -459,7 +459,7 @@
               <strong>Pranav Kadam</strong>,
               <a href="https://mcl.usc.edu/people/graduate-students/#Qingyang_Zhou">Qingyang Zhou</a>,
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
-              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>,
+              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
 							<em>IEEE International Conference on Image Processing, 2022</em>
               <br>
@@ -488,7 +488,7 @@
               <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">Min Zhang</a>,
 	      <a href="http://mcl.usc.edu/people/graduate-students/#Jiahao_Gu">Jiahao Gu</a>,
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
-              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>,
+              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
 							<em>IEEE International Workshop on Multimedia Signal Processing (MMSP), 2022</em>
               <br>
@@ -603,7 +603,7 @@
               <strong>Pranav Kadam</strong>,
               <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">Min Zhang</a>,
               <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
-              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>,
+              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
               <br>
 							<em>IEEE Internation Comference on Visual Communication and Image Processing, 2020</em>
               <br>
