--- a/PCRP/index.html
+++ b/PCRP/index.html
@@ -32,7 +32,7 @@
             <h2 class="col-md-12 text-center">
                 <b>PCRP</b>: Unsupervised Point Cloud Object  <br> Retrieval and Pose Estimation</br> 
                 <small>
-                    Submitted to IEEE International Conference on Image Processing 2022
+                    IEEE International Conference on Image Processing (ICIP), 2022
                 </small>
             </h2>
         </div>
