--- a/PCRP/index.html
+++ b/PCRP/index.html
@@ -142,7 +142,12 @@ traditional and learning based methods.
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
                     <textarea id="bibtex" class="form-control" readonly>
-   Coming soon
+   @article{kadam2022pcrp,
+            title={PCRP: Unsupervised Point Cloud Object Retrieval and Pose Estimation},
+            author={Kadam, Pranav and Zhou, Qingyang and Liu, Shan and Kuo, C-C Jay},
+            journal={arXiv preprint arXiv:2202.07843},
+            year={2022}
+            }
 </textarea>
                 </div>
             </div>
