--- a/index.html
+++ b/index.html
@@ -689,7 +689,9 @@
             </td>
             <td width="75%" valign="center">
               <ul>
-                <li><b>Reviewer</b>, ISPRS Journal of Photogrammetry and Remote Sensing</li>
+                <li><b>Reviewer</b>, IEEE International Conference on Image Processing (ICIP), 2022</li>
+	      	<li><b>Reviewer</b>, APSIPA Transactions on Signal and Information Processing</li>
+	    	<li><b>Reviewer</b>, ISPRS Journal of Photogrammetry and Remote Sensing</li>
                 <li><b>Course Grader</b>, EE 569 - Introduction to Digital Image Processing, Spring 2020</li>
                 <li><b>Course Grader</b>, EE 562 - Random Processes, Spring 2020</li>
                 <li><b>Course Grader</b>, EE 567 - Communication Systems, Fall 2019</li>
