--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                     <tr>
                         <td style="padding:10px;width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src='images/Sony.png' width="110" class="side-image">
+                                <img src='images/sony.png' width="110" class="side-image">
                             </div>
                         </td>
                         <td style="padding:10px;width:75%;vertical-align:top">
                             <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
-                            <papertitle><big>InterDigital</big></papertitle>
+                            <papertitle><big>Sony</big></papertitle>
                             <br>
                             <papertitle style="color:maroon"><big>Applied Research Intern</big></papertitle>
                             <br>
