--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 </tbody></table>
 	
 	
-		<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+<!-- 		<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
                     <tr>
                         <td style="padding:10px;width:25%;vertical-align:middle">
@@ -365,7 +365,7 @@
                         </td>
                         <td style="padding:10px;width:75%;vertical-align:top">
                             <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
-                            <papertitle><big>Inter University Centre for Astronomy and Astrophysics (IUCAA)</big></papertitle>
+<!--                             <papertitle><big>Inter University Centre for Astronomy and Astrophysics (IUCAA)</big></papertitle>
                             <br>
                             <papertitle style="color:maroon"><big>Research Intern</big></papertitle>
                             <br>
@@ -386,8 +386,8 @@
 
                 </tbody></table>
 			
-			</div>
-                <hr class="soft">
+			</div> -->
+                <hr class="soft"> -->
 	      
 	      
 	      <button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Teaching Experience</heading></button>
