--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 </tbody></table>
 			
 			</div> -->
-                <hr class="soft"> -->
+<!--                 <hr class="soft"> --> -->
 	      
 	      
 	      <button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Teaching Experience</heading></button>
