--- a/index.html
+++ b/index.html
@@ -750,8 +750,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                This website is a modification of Jon Barron's <a href="https://github.com/jonbarron/jonbarron_website">source code</a>.
-                Feel free to use it in your own way while attributing Jon.
+                 <a href="https://github.com/jonbarron/jonbarron_website">Source code</a> by Jon Barron.
               </p>
             </td>
           </tr>
