--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                 
                                 <ul>
                                     <li><b>Supervisor -</b> C.-C. Jay Kuo</li>
-                                    <li><b>Projects - </b>Point cloud classification, registration, segmentation</li>
+                                    <li><b>Projects - </b>Point cloud classification, registration, odometry, scene flow estimation and pose estimation</li>
                                 </ul>
                             </p>
                         </td>
