--- a/index.html
+++ b/index.html
@@ -462,6 +462,8 @@
               <p>An introductory book on 3D Point Clouds aimed for graduate students with basic knowledge of Machine Learning and who wish to get started with point clouds.</p>
             </td>
           </tr> 
+		
+	 <hr class="soft">
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
@@ -736,6 +738,7 @@
           </td>
           <td width="75%" valign="center">
             <ul>
+	      <li>Collaborated with Dipankar Bhattarcharya from IUCAA, Pune on research on detection and analysis of Gamma Ray Bursts (GRBs) using Machine Learning techniques</li>
               <li>Collaborated with <a href="https://research.mitwpu.edu.in/researcher/arti-khaparde">Dr. Arti Khaparde</a> and <a href="https://www.sac.gov.in/Vyom/index.jsp">Indian Space Research Organization (ISRO)</a> in project on study of vegetation dynamics from satellite images</li>
               <li>Interned for part-time at <a href="https://anveshak.com/index.php">Anveshak Technology and Knowledge Solutions</a>, Pune in IoT domain</li>
               <li>Led in organizing conferences, workshops, guest lectures, and competitions as a part of MIT Pune IEEE Students Branch</li>
