--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                             <p>
                                 
                                 <ul>
-                                    <li><b>Supervisor -</b> Danillo Graziosi, Alexandre Zhaghetto</li>
-                                    <li><b>Project - </b>Immersive Media Compression</li>
+                                    <li><b>Supervisors -</b> Danillo Graziosi, Alexandre Zhaghetto, Ali Tabatabai</li>
+                                    <li><b>Project - </b>Dynamic dense point cloud compression, rate control in neural network based point cloud compression</li>
                                 </ul>
                             </p>
                         </td>
@@ -315,7 +315,7 @@
                                 
                                 <ul>
                                     <li><b>Supervisor -</b> Dong Tian, Jiahao Pang</li>
-                                    <li><b>Project - </b>Dynamic LiDAR Point Cloud Compression using Deep Learning techniques</li>
+                                    <li><b>Project - </b>Dynamic LiDAR point cloud compression using deep learning techniques</li>
                                 </ul>
                             </p>
                         </td>
