--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <p>
                                 
                                 <ul>
-                                    <li><b>Supervisor -</b> Dong Tian, Jiahao Pang</li>
+                                    <li><b>Supervisors -</b> Dong Tian, Jiahao Pang</li>
                                     <li><b>Project - </b>Dynamic LiDAR point cloud compression using deep learning techniques, intra-/inter-mode decision in dynamic point cloud compression</li>
                                 </ul>
                             </p>
