--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <p style="color:maroon; display:inline">Oct '22 &nbsp</p>
                         </td>
                         <td>
-				Submitted S3I-PointHop paper on SO(3) group invariant point cloud classification at IEEE ICASSP, 2023
+				Submitted S3I-PointHop paper on SO(3) group invariant point cloud classification to IEEE ICASSP, 2023
                         </td>
                     </tr>
 			
