--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                             <p>
                                 
                                 <ul>
-                                    <li><b>Supervisors -</b> Danillo Graziosi, Alexandre Zhaghetto, Ali Tabatabai</li>
+                                    <li><b>Supervisors -</b> Danillo Graziosi, Alexandre Zaghetto, Ali Tabatabai</li>
                                     <li><b>Project - </b>Dynamic dense point cloud compression, rate control in neural network based point cloud compression</li>
                                 </ul>
                             </p>
