--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
 		      <name>Pranav Kadam</name>
               </p>
-              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. My research focuses on 3D point cloud analysis and compression. At Sony, I am working on compression of immersive media content with an aim to contribute to MPEG Standards. I spent the summer of 2022 at InterDigital as a Research Intern where I worked on learning based compression of dynamic LiDAR point clouds.
+              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. My research focuses on 3D point cloud analysis and compression. During Fall 2022, I worked at Sony on dynamic dense point cloud compression. I spent the summer of 2022 at InterDigital as a Research Intern where I worked on learning based compression of dynamic LiDAR point clouds.
 
               </p>
               <p style="text-align:center">
@@ -424,7 +424,8 @@
                             <br>
                             <p>
                                 <ul>
-					                          <li>EE 569 - Introduction to Digital Image Processing, <i>Spring 2022</i></li>
+				<li>EE 559 - Machine Learning I, <i>Spring 2023</i></li>
+				<li>EE 569 - Introduction to Digital Image Processing, <i>Spring 2022</i></li>
                                     <li>EE 510 - Linear Algebra, <i>Fall 2021</i></li>   
                                 </ul>
                             </p>
@@ -734,6 +735,7 @@
             <td width="75%" valign="center">
               <ul>
                 <li><b>Reviewer</b>, IEEE International Conference on Image Processing (ICIP), 2022</li>
+	      	<li><b>Reviewer</b>, Springer Nature</li>
 	      	<li><b>Reviewer</b>, APSIPA Transactions on Signal and Information Processing</li>
 	    	<li><b>Reviewer</b>, ISPRS Journal of Photogrammetry and Remote Sensing</li>
                 <li><b>Course Grader</b>, EE 569 - Introduction to Digital Image Processing, Spring 2020</li>
