--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                           <br>
 			    <i>Los Angeles, CA</i>
                             <br>                              							    
-                            August 2020 - May 2023 (expected)
+                            August 2020 - May 2023
                             <br>
                             <br>
                             <p>
@@ -288,7 +288,7 @@
                             <br>
 			    <i>San Jose, CA</i>
                             <br>                              							    
-                            August 2022 - present
+                            August 2022 - December 2022
                             <br>
                             <br>
                             <p>
