--- a/index.html
+++ b/index.html
@@ -272,6 +272,36 @@
 	      <button style="border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education"><heading>Research Experience</heading></button>
                 <div id="content-experience" class="collapse in">
 			
+		<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+
+                    <tr>
+                        <td style="padding:10px;width:25%;vertical-align:middle">
+                            <div class="one">
+                                <img src='images/tencent.png' width="110" class="side-image">
+                            </div>
+                        </td>
+                        <td style="padding:10px;width:75%;vertical-align:top">
+                            <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
+                            <papertitle><big>Tencent</big></papertitle>
+                            <br>
+                            <papertitle style="color:maroon"><big>Immersive Media Intern</big></papertitle>
+                            <br>
+			    <i>Palo Alto, CA</i>
+                            <br>                              							    
+                            February 2023 - present
+                            <br>
+                            <br>
+                            <p>
+                                
+                                <ul>
+                                    <li><b>Supervisors -</b> Xiaozhong Xu, Shan Liu</li>
+                                    <li><b>Project - </b>Immersive Media Processing and Compression</li>
+                                </ul>
+                            </p>
+                        </td>
+                    </tr>
+
+                </tbody></table>			
 				                <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
                     <tr>
@@ -315,11 +345,11 @@
                             <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
                             <papertitle><big>InterDigital, Inc.</big></papertitle>
                             <br>
-                            <papertitle style="color:maroon"><big>Research Intern</big></papertitle>
+                            <papertitle style="color:maroon"><big>Immersive Media Intern</big></papertitle>
                             <br>
 			    <i>New York, NY</i>
                             <br>                              							    
-                            May 2022 - August 2022
+                            May 2022 - present
                             <br>
                             <br>
                             <p>
