--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             <!-- <papertitle style="color:gray"><big>Software Development Engineer Intern</big> </papertitle> <papertitle ><big> | Expedia Group</big></papertitle> -->
                             <papertitle><big>InterDigital, Inc.</big></papertitle>
                             <br>
-                            <papertitle style="color:maroon"><big>Immersive Media Intern</big></papertitle>
+                            <papertitle style="color:maroon"><big>Research Intern</big></papertitle>
                             <br>
 			    <i>New York, NY</i>
                             <br>                              							    
