--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
 		      <name>Pranav Kadam</name>
               </p>
-              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. My research focuses on 3D point cloud analysis and compression. During Fall 2022, I worked at Sony on dynamic dense point cloud compression. I spent the summer of 2022 at InterDigital as a Research Intern where I worked on learning based compression of dynamic LiDAR point clouds.
+              <p style="text-align:justify">I am a PhD Candidate in the Electrical and Computer Engineering department at University of Southern California (<a href="https://www.usc.edu/">USC</a>) advised by Prof. <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>. I am actively involved in research and development of methods for 3D Point Cloud Analysis and Compression. Presently, I am working at Tencent Media Lab on 3D Volumetric Media Compression. Previously, I have worked at Sony and InterDigital on AI-based Point Cloud Compression. My research at USC is related to 3D Point Cloud Perception.
 
               </p>
               <p style="text-align:center">
