--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                             <p>
                                 
                                 <ul>
-                                    <li><b>Supervisors -</b> Xiaozhong Xu, Shan Liu</li>
+                                    <li><b>Supervisors -</b> Xiaozhong Xu</li>
                                     <li><b>Project - </b>Immersive Media Processing and Compression</li>
                                 </ul>
                             </p>
