--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                    	
 			<tr>
                         <td>
-                            <p style="color:maroon; display:inline">Oct '22 &nbsp</p>
+                            <p style="color:maroon; display:inline">Feb '23 &nbsp</p>
                         </td>
                         <td>
-				Submitted S3I-PointHop paper on SO(3) group invariant point cloud classification to IEEE ICASSP, 2023
+				S3I-PointHop paper on SO(3) group invariant point cloud classification accepted in IEEE ICASSP, 2023
                         </td>
                     </tr>
 			
