--- a/index.html
+++ b/index.html
@@ -518,6 +518,35 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    
+          <tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/S3I-PointHop.PNG' width="180" height="160">
+              </div>
+
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="./S3I-PointHop/index.html">
+                <papertitle>S3I-PointHop: SO (3)-Invariant PointHop for 3D Point Cloud Classification</papertitle>
+              </a>
+              <br>
+              <strong>Pranav Kadam</strong>,
+              <a href="https://mcl.usc.edu/people/graduate-students/#Hardik_Prajapati">#Hardik Prajapati</a>,
+              <a href="https://scholar.google.com/citations?user=s2zpoasAAAAJ&hl=en&authuser=1">Min Zhang</a>,
+              <a href="https://mcl.usc.edu/people/graduate-students/#Jintang_Xue">Jintang Xue</a>,
+              <a href="https://www.linkedin.com/in/shanliu">Shan Liu</a>,
+              <a href="https://mcl.usc.edu/people/cckuo/">C.-C. Jay Kuo</a>
+              <br>
+							<em>IEEE International Conference on Acoustics, Speech and Signal Processing, 2023</em>
+              <br>
+              <a href="./S3I-PointHop/">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2302.11506">arXiv</a>
+            
+              <p>First, a similar pre-aligned point cloud is retrieved from the gallery set. Then, the input object is registered to the retrieved object to estimate its pose.</p>
+            </td>
+          </tr> 
 
 		<tr onmouseout="mip360_stop()" onmouseover="mip360_start()"  bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
