--- a/S3I-PointHop/index.html
+++ b/S3I-PointHop/index.html
@@ -30,7 +30,7 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <b>PCRP</b>: S3I-PointHop: SO (3)-Invariant PointHop <br> for 3D Point Cloud Classification</br> 
+                <b>PCRP</b>: : SO (3)-Invariant PointHop <br> for 3D Point Cloud Classification</br> 
                 <small>
                     IEEE International Conference on Acoustics, Speech and Signal Processing
                 </small>
@@ -56,12 +56,12 @@
                             Min Zhang
                         </a>
                         </br>University of Southern California
-                    </li><br>
+                    </li>
                     <li>
                         <a href="http://mcl.usc.edu/people/graduate-students/#Jintang_Xue">
-                            Qingyang Zhou
+                            Jintang Xue
                         </a>
-                        </br>Jintang Xue
+                        </br>University of Southern California
                     </li><br>
                     <li>
                         <a href="https://www.linkedin.com/in/shanliu">
@@ -154,7 +154,12 @@
                 </h3>
                 <div class="form-group col-md-10 col-md-offset-1">
                     <textarea id="bibtex" class="form-control" readonly>
-   Coming soon
+                        @inproceedings{kadam2023s3i,
+                            title={S3I-PointHop: SO (3)-Invariant PointHop for 3D Point Cloud Classification},
+                            author={Kadam, Pranav and Prajapati, Hardik and Zhang, Min and Xue, Jintang and Liu, Shan and Kuo, C.-C. Jay},
+                            journal={arXiv preprint arXiv:2302.11506},
+                            year={2023}
+                            }
 </textarea>
                 </div>
             </div>
